# tauri_vue_bi

./: .gitignore  AGENTCHAT_REFACTOR_COMPLETE_20260516.md  AGENT_TOOLS_QUICK_REF.md  AGENT_TOOL_SYSTEM.md  ARCHITECTURE_COMPARISON.md  CHART_COVERAGE_ANALYSIS.md  CHART_TOOLS_GUIDE.md  EXCEL_EXPORT_GUIDE.md  FRONTEND_INTEGRATION_COMPLETE_20260516.md  LLM_MODULE_USAGE.md  LLM_QUICK_REF.md  MAKEFILE_CLEANUP_SUMMARY.md  MIGRATION_GUIDE_INDEX.md  Makefile  OPENAI_DEBUG_PLAN_20260517.md  P0_FIX_COMPILATION_ERRORS.md  P0_FIX_COMPLETE_20260517.md  PROMPT_ALIGNMENT_COMPLETE_20260517.md  PYTHON_CHART_VERIFICATION.md  PYTHON_TO_RUST_MIGRATION_PLAN.md  QUICK_START_AGENT.md  QUICK_START_MIGRATION.md  README.md  README_MIGRATION.md  REFACTOR_PLAN.md  RUST_AGENT_FILE_STRUCTURE_ALIGNMENT.md  RUST_CHART_ENGINE_COMPLETE_20260516.md  RUST_CHART_QUICK_START.md  RUST_MIGRATION_PROGRESS.md  RUST_PLOTLY_CHART_ENGINE_DESIGN.md  RUST_VS_PYTHON_AGENT_WORKFLOW_ANALYSIS.md  SESSION_AND_PLOTLY_WORK_20260516.md  STEP1_COMPLETE.md  WORK_SUMMARY_20260516.md  WORK_SUMMARY_20260516_FINAL.md  WORK_SUMMARY_CHARTS_20260516.md  WORK_SUMMARY_CHARTS_EXT_20260516.md  cargo_output.txt  index.html  package-lock.json  (+4 more)
src-tauri/: Cargo.toml  cargo_output.txt  stats.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  df_util.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/agent/: mod.rs  prompts.rs  session.rs  state_machine.rs  tools_schema.rs
src-tauri/src/agent/api/: chat.rs  color_schemes.rs  dashboard.rs  datasource.rs  mod.rs  models.rs  output.rs  system.rs
src-tauri/src/agent/dataops/: data_tools.rs  export_tools.rs  mod.rs
src-tauri/src/agent/functions/: mod.rs
src-tauri/src/agent/functions/analyze/: decile.rs  decision_tree.rs  kmeans.rs  mod.rs  registry.rs
src-tauri/src/agent/functions/charts/: area_chart.rs  bar_chart.rs  base.rs  box_plot.rs  bubble_plot.rs  chart_generate.rs  color_schemes.rs  mod.rs  (+14 more)
src-tauri/src/agent/llm/: client.rs  config.rs  mod.rs
src-tauri/src/agent/prompts/: mod.rs  prompts.rs  system_prompt.md
src-tauri/src/agent/tools/: chart_engine.rs  chart_tools.rs  color_schemes.rs  data_tools.rs  export_tools.rs  mod.rs  plotly_tools.rs
src-tauri/src/commands/: agent_chat.rs  chart.rs  clean.rs  dataset.rs  datasource.rs  gantt.rs  groupby.rs  llm_test.rs  loader.rs  melt.rs  merge.rs  mod.rs  pivot.rs  python_agent.rs  save.rs  time_analysis.rs
src-tauri/src/llm/: client.rs  mod.rs
src-tauri/src/llm/providers/: claude.rs  mod.rs  openai.rs
(+64 files in other folders)
